--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -3,8 +3,8 @@
 {% block content %}
 <section class="main-menu">
   <nav>
-    <a href="{% url 'single_racer' %}">Single Player</a>
-    <a href="#">Multiplayer</a>
+    <a href="{% url 'single_racer' %}">Solo</a>
+    <a href="#">Versus</a>
   </nav>
 </section>
 {% endblock %}
