--- a/templates/single_racer.html
+++ b/templates/single_racer.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Sigle Player{% endblock title %}
+{% block title %}Solo{% endblock title %}
 
 {% block content %}
 <header class="game-menu">
@@ -8,6 +8,15 @@
   <button id="reset_text" class="menu-button">Reset</button>
 </header>
 <section class="main">
+  <div class="counter-div">
+    <div>
+      <span id="minutes">00</span>:<span id="seconds">00</span>
+    </div>
+    <div>
+      <span id="wpm">0.0</span> wpm
+    </div>
+    <div><span id="cpm">0.0</span> cpm</div>
+  </div>
   <div class="text-div">
     <span class="text-written"></span><span class="text-wrong"></span
     ><span id="text-to-write" class="text-to-write"></span>
@@ -19,8 +28,10 @@
     class="prompt"
     onblur="this.focus()"
     autofocus
+    autocomplete="off"
   />
 </section>
 {% endblock content %} {% block js %}
+<script src="{% static 'js/easytimer.min.js' %}"></script>
 <script src="{% static 'js/single_racer.js' %}"></script>
 {% endblock js %}
