--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}QWERTY - Improve your typing{% endblock title %}</title>
+    <script src="https://kit.fontawesome.com/ef81b84058.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     {% block css %}
       <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
